classDiagram
    class Product
    class ProductSerial
    class StockBalance
    class StockLedger
    class StockIn
    class StockOut
    class StockTransfer
    class StockAdjustment
    class SalesInvoice
    class WarrantyCoverage
    class WarrantyClaim
    class AuditLog
    class InventoryPostingService
    class ReportTraceService
    class AppDbContext
    Product  1 --> 0..* ProductSerial
    Product 1 --> 0..* StockBalance
    Product 1 --> 0..* StockLedger
    StockIn 1 --> 0..* ProductSerial : LastStockInLine
    StockOut 1 --> 0..* ProductSerial : LastStockOutLine
    StockTransfer --> StockLedger
    StockAdjustment --> StockLedger
    SalesInvoice 1 --> 0..* WarrantyCoverage
    ProductSerial 1 --> 0..* WarrantyCoverage
    WarrantyCoverage 1 --> 0..* WarrantyClaim
    WarrantyClaim --> ProductSerial : ReplacementSerial
    InventoryPostingService --> AppDbContext
    ReportTraceService --> AppDbContext
    AuditLog --> AppDbContext
